[package]
name = "rcli-cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rayon = "1.10.0"
tokio = { version = "1", features = ["full"] }
comfy-table = "7.1.3"
inquire = { version = "0.7.5", features = ["date"] }
rusqlite = { version = "0.32.0", features = ["bundled", "backup"] }